[package]
name = "l-alglib"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gen_from_ord"
path = "src/gen_from_ord.rs"

[[bin]]
name = "gen_from_ord_multi"
path = "src/gen_from_ord_multi.rs"

[[bin]]
name = "gen_from_ord_multi_short"
path = "src/gen_from_ord_multi_short.rs"

[[bin]]
name = "gen_from_ord_static"
path = "src/gen_from_ord_static.rs"

[[bin]]
name = "get_repr"
path = "src/get_repr.rs"

[[bin]]
name = "extract_pord"
path = "src/extract_pord.rs"

[dependencies]
bzip2 = "0.6.1"
itertools = "0.14.0"
serde-pickle = "1.2.0"
serde_json = "1.0.149"
