[package]
name = "l-alglib"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gen_from_ord"
path = "src/gen_from_ord.rs"

[[bin]]
name = "gen_from_ord_cmd"
path = "src/gen_from_ord_cmd.rs"

[[bin]]
name = "gen_from_ord_file"
path = "src/gen_from_ord_file.rs"

[[bin]]
name = "gen_from_ord_file_new_pos"
path = "src/gen_from_ord_file_new_pos.rs"


[[bin]]
name = "gen_from_ord_cmd_new_pos"
path = "src/gen_from_ord_cmd_new_pos.rs"

[[bin]]
name = "gen_from_ord_short"
path = "src/gen_from_ord_short.rs"

[[bin]]
name = "gen_from_ord_file_short"
path = "src/gen_from_ord_file_short.rs"

[[bin]]
name = "gen_from_ord_short_with_time_limit"
path = "src/gen_from_ord_short_with_time_limit.rs"

[[bin]]
name = "gen_from_ord_file_short_with_time_limit"
path = "src/gen_from_ord_file_short_with_time_limit.rs"

[[bin]]
name = "gen_from_ord_file_short_with_time_limit_new_pos"
path = "src/gen_from_ord_file_short_with_time_limit_new_pos.rs"

[[bin]]
name = "gen_from_ord_file_short_with_iter_limit"
path = "src/gen_from_ord_file_short_with_iter_limit.rs"

[[bin]]
name = "gen_from_ord_file_short_with_iter_limit_new_pos"
path = "src/gen_from_ord_file_short_with_iter_limit_new_pos.rs"

[[bin]]
name = "gen_from_ord_multi"
path = "src/gen_from_ord_multi.rs"

[[bin]]
name = "gen_from_ord_multi_new_pos"
path = "src/gen_from_ord_multi_new_pos.rs"

[[bin]]
name = "gen_from_ord_file_multi"
path = "src/gen_from_ord_file_multi.rs"

[[bin]]
name = "gen_from_ord_file_multi_new_pos"
path = "src/gen_from_ord_file_multi_new_pos.rs"

[[bin]]
name = "gen_from_ord_multi_short"
path = "src/gen_from_ord_multi_short.rs"

[[bin]]
name = "gen_from_ord_multi_short_with_time_limit"
path = "src/gen_from_ord_multi_short_with_time_limit.rs"

[[bin]]
name = "gen_from_ord_file_multi_short_with_iter_limit"
path = "src/gen_from_ord_file_multi_short_with_iter_limit.rs"

[[bin]]
name = "gen_from_ord_file_multi_short_with_iter_limit_new_pos"
path = "src/gen_from_ord_file_multi_short_with_iter_limit_new_pos.rs"

[[bin]]
name = "gen_from_ord_file_multi_short_with_time_limit"
path = "src/gen_from_ord_file_multi_short_with_time_limit.rs"

[[bin]]
name = "gen_from_ord_file_multi_short_with_time_limit_new_pos"
path = "src/gen_from_ord_file_multi_short_with_time_limit_new_pos.rs"


[[bin]]
name = "gen_from_ord_static"
path = "src/gen_from_ord_static.rs"

[[bin]]
name = "get_repr"
path = "src/get_repr.rs"

[[bin]]
name = "extract_pord"
path = "src/extract_pord.rs"

[[bin]]
name = "plan8-1_2"
path = "src/plan8-1_2.rs"

[[bin]]
name = "plan8-1_3"
path = "src/plan8-1_3.rs"

[[bin]]
name = "plan8-1_4"
path = "src/plan8-1_4.rs"

[[bin]]
name = "plan8-1728_1"
path = "src/plan8-1728_1.rs"

[[bin]]
name = "lalg_test_cmd"
path = "src/lalg_test_cmd.rs"




[dependencies]
bzip2 = "0.6.1"
itertools = "0.14.0"
serde-pickle = "1.2.0"
serde_json = "1.0.149"
