[package]
name = "l-alglib"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gen_from_ord"
path = "src/gen_from_ord.rs"

[[bin]]
name = "gen_from_ord_cmd"
path = "src/gen_from_ord_cmd.rs"

[[bin]]
name = "gen_from_ord_file"
path = "src/gen_from_ord_file.rs"

[[bin]]
name = "gen_from_ord_file_new_pos"
path = "src/gen_from_ord_file_new_pos.rs"


[[bin]]
name = "gen_from_ord_cmd_new_pos"
path = "src/gen_from_ord_cmd_new_pos.rs"

[[bin]]
name = "gen_from_ord_short"
path = "src/gen_from_ord_short.rs"

[[bin]]
name = "gen_from_ord_file_short"
path = "src/gen_from_ord_file_short.rs"

[[bin]]
name = "gen_from_ord_short_with_time_limit"
path = "src/gen_from_ord_short_with_time_limit.rs"

[[bin]]
name = "gen_from_ord_file_short_with_time_limit"
path = "src/gen_from_ord_file_short_with_time_limit.rs"

[[bin]]
name = "gen_from_ord_file_short_with_time_limit_new_pos"
path = "src/gen_from_ord_file_short_with_time_limit_new_pos.rs"

[[bin]]
name = "gen_from_ord_file_short_with_iter_limit"
path = "src/gen_from_ord_file_short_with_iter_limit.rs"

[[bin]]
name = "gen_from_ord_file_short_with_iter_limit_new_pos"
path = "src/gen_from_ord_file_short_with_iter_limit_new_pos.rs"

[[bin]]
name = "gen_from_ord_multi"
path = "src/gen_from_ord_multi.rs"

[[bin]]
name = "gen_from_ord_multi_new_pos"
path = "src/gen_from_ord_multi_new_pos.rs"

[[bin]]
name = "gen_from_ord_file_multi"
path = "src/gen_from_ord_file_multi.rs"

[[bin]]
name = "gen_from_ord_file_multi_new_pos"
path = "src/gen_from_ord_file_multi_new_pos.rs"

[[bin]]
name = "gen_from_ord_multi_short"
path = "src/gen_from_ord_multi_short.rs"

[[bin]]
name = "gen_from_ord_multi_short_with_time_limit"
path = "src/gen_from_ord_multi_short_with_time_limit.rs"

[[bin]]
name = "gen_from_ord_file_multi_short_with_iter_limit"
path = "src/gen_from_ord_file_multi_short_with_iter_limit.rs"

[[bin]]
name = "gen_from_ord_file_multi_short_with_iter_limit_new_pos"
path = "src/gen_from_ord_file_multi_short_with_iter_limit_new_pos.rs"

[[bin]]
name = "gen_from_ord_file_multi_short_with_time_limit"
path = "src/gen_from_ord_file_multi_short_with_time_limit.rs"

[[bin]]
name = "gen_from_ord_file_multi_short_with_time_limit_new_pos"
path = "src/gen_from_ord_file_multi_short_with_time_limit_new_pos.rs"


[[bin]]
name = "gen_from_ord_static"
path = "src/gen_from_ord_static.rs"

[[bin]]
name = "get_repr"
path = "src/get_repr.rs"

[[bin]]
name = "extract_pord"
path = "src/extract_pord.rs"

[[bin]]
name = "plan8-1_2"
path = "src/plans/plan8-1_2.rs"

[[bin]]
name = "plan8-1_3"
path = "src/plans/plan8-1_3.rs"

[[bin]]
name = "plan8-1_4"
path = "src/plans/plan8-1_4.rs"

[[bin]]
name = "plan8-1728_1"
path = "src/plans/plan8-1728_1.rs"

[[bin]]
name = "plan8-various"
path = "src/plans/plan8-various.rs"

[[bin]]
name = "plan8-1733_2"
path = "src/plans/plan8-1733_2.rs"

[[bin]]
name = "plan8-1744_2"
path = "src/plans/plan8-1744_2.rs"

[[bin]]
name = "plan8-1745_2"
path = "src/plans/plan8-1745_2.rs"

[[bin]]
name = "plan8-1762_2"
path = "src/plans/plan8-1762_2.rs"

[[bin]]
name = "plan8-1793_2"
path = "src/plans/plan8-1793_2.rs"

[[bin]]
name = "plan8-1794_2"
path = "src/plans/plan8-1794_2.rs"

[[bin]]
name = "plan8-1795_2"
path = "src/plans/plan8-1795_2.rs"

[[bin]]
name = "plan8-1798_2"
path = "src/plans/plan8-1798_2.rs"

[[bin]]
name = "plan8-1799_2"
path = "src/plans/plan8-1799_2.rs"

[[bin]]
name = "plan8-1800_2"
path = "src/plans/plan8-1800_2.rs"

[[bin]]
name = "plan8-1802_2"
path = "src/plans/plan8-1802_2.rs"

[[bin]]
name = "plan8-1808_2"
path = "src/plans/plan8-1808_2.rs"

[[bin]]
name = "plan8-1820_2"
path = "src/plans/plan8-1820_2.rs"

[[bin]]
name = "plan8-1877_2"
path = "src/plans/plan8-1877_2.rs"

[[bin]]
name = "plan8-1879_2"
path = "src/plans/plan8-1879_2.rs"

[[bin]]
name = "plan8-1881_2"
path = "src/plans/plan8-1881_2.rs"

[[bin]]
name = "plan8-1890_2"
path = "src/plans/plan8-1890_2.rs"

[[bin]]
name = "plan8-1935_2"
path = "src/plans/plan8-1935_2.rs"

[[bin]]
name = "lalg_test_cmd"
path = "src/lalg_test_cmd.rs"

[[bin]]
name = "plan7-1_2"
path = "src/plans/plan7-1_2.rs"

[[bin]]
name = "plan7-2_2"
path = "src/plans/plan7-2_2.rs"

[[bin]]
name = "plan7-3_2"
path = "src/plans/plan7-3_2.rs"

[[bin]]
name = "plan7-4_2"
path = "src/plans/plan7-4_2.rs"

[[bin]]
name = "plan7-5_2"
path = "src/plans/plan7-5_2.rs"

[[bin]]
name = "plan7-66_2"
path = "src/plans/plan7-66_2.rs"

[[bin]]
name = "plan7-75_2"
path = "src/plans/plan7-75_2.rs"

[[bin]]
name = "plan7-256_2"
path = "src/plans/plan7-256_2.rs"

[[bin]]
name = "plan7-257_2"
path = "src/plans/plan7-257_2.rs"

[[bin]]
name = "plan7-272_2"
path = "src/plans/plan7-272_2.rs"

[dependencies]
bzip2 = "0.6.1"
itertools = "0.14.0"
serde-pickle = "1.2.0"
serde_json = "1.0.149"
